--- a/files/login.html
+++ b/files/login.html
@@ -10,7 +10,7 @@
 
     <label>E-Mail :
     <input type="text" placeholder="E-mail" name="e-mail">
-</label><<br>
+</label><br>
     <label>Password : <input type="password" placeholder="Password" name="pasword"></label><br><br>
     <input type="button" value="Login">
 </form>
