--- a/files/login.html
+++ b/files/login.html
@@ -2,15 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
 </head>
 <body>
-    <h1>Login</h1>
+<h1>Login</h1>
 <form name="login">
 
     <label>E-Mail :
-    <input type="text" placeholder="E-mail" name="e-mail">
-</label><br>
+        <input type="text" placeholder="E-mail" name="e-mail">
+    </label><br>
     <label>Password : <input type="password" placeholder="Password" name="pasword"></label><br><br>
     <input type="button" value="Login">
 </form>
