added forgot Password and creat new Account

--- a/login.html
+++ b/login.html
@@ -5,15 +5,19 @@
     <title>Login</title>
 </head>
 <body>
-    <h1>Login</h1>
+<h1>Login</h1>
 <form name="login">
 
-    <label>E-Mail :
-    <input type="text" placeholder="E-mail" name="e-mail">
-</label><br>
-    <label>Password : <input type="password" placeholder="Password" name="pasword"></label><br><br>
-    <input type="button" value="Login">
+    <label>E-Mail:
+        <input type="text" placeholder="E-mail" id="email">
+    </label><br><br>
+    <label>Password: <input type="password" placeholder="Password" name="password"></label><br>
+
+    <p>Forgot Password?<a href="loginforgotpass.html"> Reset</a></p>
+    <input type="button" onclick="window.alert('Hello World')" value="Login">
 </form>
+<p>Don't have an account yet? <a href="loginNewAccount.html">Sign In</a></p>
+
 
 </body>
 </html>
