added forgot Password and creat new Account

--- a/loginNewAccount.html
+++ b/loginNewAccount.html
@@ -22,7 +22,7 @@
     <label>Password again:
         <input type="text" placeholder="Password" id="againPassword">
     </label><br><br>
-    <input type="button" onclick="window.alert('Hello World')" value="Login">
+    <input type="button" onclick="window.alert('Hello World')" value="Sign In">
 </form>
 <p>Already have an account yet? <a href="login.html">Get Account</a></p>
 </body>
