added new Password-side for reset password

--- a/loginNewAccount.html
+++ b/loginNewAccount.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Neuer Kunde</title>
+    <title>New Account</title>
 </head>
 <body>
 <form name="loginNewAccount">
