--- a/loginNewPassword.html
+++ b/loginNewPassword.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>New Password</title>
+    <title>Reset Password</title>
 </head>
 <body>
 <h1>Type in your new Password</h1>
@@ -11,6 +11,8 @@
 </label><br><br>
 <label>Password again:
     <input type="text" placeholder="Password" id="againPassword">
+    <br><br>
+    <input type="submit"  value="Login">
 </label><br><br>
 </body>
 </html>
