--- a/loginNewPassword.html
+++ b/loginNewPassword.html
@@ -7,13 +7,16 @@
 </head>
 <body>
 <h1>Type in your new Password</h1>
-<label>Password:
-    <input type="text" placeholder="Password" id="password">
-</label><br><br>
-<label>Password again:
-    <input type="text" placeholder="Password" id="againPassword">
-    <br><br>
-    <input type="submit"  value="Login">
-</label><br><br>
+<form action="" method="post">
+    <label>Password:
+        <input type="text" placeholder="Password" id="password" name="password0">
+    </label><br><br>
+    <label>Password again:
+        <input type="text" placeholder="Password" id="againPassword" name="password1">
+        <br><br>
+        <input type="submit" value="Login">
+    </label>
+</form>
+<br><br>
 </body>
 </html>
