moved files to the matching directory

--- a/app/CommentDesign.html
+++ b/app/CommentDesign.html
@@ -7,6 +7,6 @@
 <canvas id="pdf" style="position: absolute; border: none; z-index: -5;"></canvas>
 <h1>hello person, whats up?</h1>
 <!-- The pdfjs library -->
-<script src="js/renderScriptWLibrary.js"></script>
+<script src="../files/js/renderScriptWLibrary.js"></script>
 </body>
 </html>
