--- a/login/loginNewPassword.html
+++ b/login/loginNewPassword.html
@@ -7,16 +7,30 @@
 </head>
 <body>
 <h1>Type in your new Password</h1>
-<form action="" method="post">
+<form id="resetPass" action="" method="post">
     <label>Password:
-        <input type="text" placeholder="Password" id="password" name="password0">
+        <input type="password" placeholder="Password" id="password" name="password0" required>
     </label><br><br>
     <label>Password again:
-        <input type="text" placeholder="Password" id="againPassword" name="password1">
+        <input type="password" placeholder="Password" id="againPassword" name="password1" required>
         <br><br>
         <input type="submit" value="Login">
     </label>
 </form>
 <br><br>
 </body>
+<script>
+    var resetpass = document.getElementById("resetPass");
+    resetpass.addEventListener('submit', function (evt) {
+        var pass1 = document.querySelector("#password").value;
+        var pass2 = document.querySelector("#againPassword").value;
+        if (!(pass1 === pass2)) {
+            window.alert("Password ist falsch ");
+            evt.preventDefault();
+        } else {
+            window.alert("Password richtig");
+        }
+
+    });
+</script>
 </html>
