--- a/login/loginNewAccount.html
+++ b/login/loginNewAccount.html
@@ -4,34 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Account</title>
+    <link rel="stylesheet" href="../files/css/Login.css">
 </head>
 <body>
-<form id="newAccountForm">
-    <h1>Get new Account</h1>
-    <label>First Name:
-        <input type="text" placeholder="First Name" id="firstName" required>
-    </label><br><br>
-    <label>Last Name:
-        <input type="text" placeholder="Last Name" id="lastName" required>
-    </label><br><br>
-    <label>E-Mail:
-        <input type="text" placeholder="E-mail" id="email" required>
-    </label><br><br>
-    <label>Password:
-        <input type="password" placeholder="Password" id="password" required>
-    </label><br><br>
-    <label>Password again:
-        <input type="password" placeholder="Password" id="againPassword" required>
-    </label><br><br>
-    <input type="submit" value="Sign In">
-</form>
-<p>Already have an account yet? <a href="login.html">Get Account</a></p>
+<div class="form">
+    <form id="newAccountForm">
+        <h1>Get new Account</h1>
+        <div class="name">
+        <label>
+            <input type="text" placeholder="First Name" id="firstName" required>
+        </label>
+
+        <label>
+            <input type="text" placeholder="Last Name" id="lastName" required>
+        </label></div><br>
+        <label>
+            <input type="email" placeholder="E-mail" id="email" required>
+        </label><br><br>
+        <label>
+            <input type="password" placeholder="Password" id="password" onkeyup="char_count();" required>
+        </label>
+        <span id="feedback"></span>
+        <br><br>
+        <label>
+            <input type="password" placeholder="Password again" id="againPassword" required>
+        </label><br><br>
+        <input type="submit" value="Sign In">
+    </form>
+    <p>Already have an account yet? <a href="login.html">Sign In</a></p>
+</div>
 </body>
 <script>
-    var newAcount = document.getElementById("newAccountForm");
+    let newAcount = document.getElementById("newAccountForm");
     newAcount.addEventListener('submit', function (evt) {
-        var pass1 = document.querySelector("#password").value;
-        var pass2 = document.querySelector("#againPassword").value;
+        let pass1 = document.querySelector("#password").value;
+        let pass2 = document.querySelector("#againPassword").value;
         if (!(pass1 === pass2) || !(emailIsValid(document.querySelector("#email").value))) {
             window.alert(" Password oder Email ist falsch ");
             evt.preventDefault();
@@ -44,5 +51,45 @@
     function emailIsValid(email) {
         return (/^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(email))
     }
+
+    function char_count() {
+        //Über die DOM-Methode document.getElementById wird der Wert aus dem Eingabefeld geholt
+        //und der Variablen val zugewiesen.
+        let val = document.getElementById('password').value;
+
+        //Anschließend wird über die selbe DOM-Methode ein Referenzpunkt für das Feedback erzeugt
+        //und in der Variablen call gespeichert.
+        let call = document.getElementById('feedback');
+
+        //Ab hier beginnt die Prüfung.
+        //Das Passwort ist entweder zu kurz, unsicher, sicher oder sehr sicher
+
+        //Ist das Passwort wenigstens 6 Zeichen lang?
+        if (val.length > 5) {
+
+            //Wenn das Passwort neben Buchstaben zusätzlich wenigstens eine Zahl
+            //und ein Sonderzeichen enthält, ist es "sehr sicher".
+            if (val.match(/\d+/) && val.match(/[a-zA-ZäöüÄÖÜ]+/) && val.match(/\W/)) {
+                call.style.color = "#428c0d";
+                call.innerHTML = "<strong>sehr sicher!</strong>";
+            }
+
+            //Wenn das Passwort nur eine Zahl oder ein Sonderzeichen enthält, ist es "sicher"?
+            else if (val.match(/\d+/) && val.match(/[a-zA-ZäöüÄÖÜ]+/) || val.match(/\W/) && val.match(/[a-zA-ZäöüÄÖÜ]+/)) {
+                call.style.color = "#56a40c";
+                call.innerHTML = "<strong>sicher!</strong>";
+            } else //Hier enthält das Passwort weder Ziffern noch Sonderzeichen und ist somit "unsicher".
+            {
+
+                call.style.color = "#ff9410";
+                call.innerHTML = "<strong>unsicher!</strong>";
+            }
+        } else //Hier enthält das Passwort nicht mal die erforderlichen 6 Zeichen und ist daher "zu kurz"
+        {
+            call.style.color = "#ff352c";
+            call.innerHTML = "<strong>zu kurz!</strong>";
+        }
+    }
+
 </script>
 </html>
