--- a/login/loginNewPassword.html
+++ b/login/loginNewPassword.html
@@ -1,36 +1,86 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reset Password</title>
+    <link rel="stylesheet" href="../files/css/Login.css">
 </head>
 <body>
+<div class="form">
 <h1>Type in your new Password</h1>
 <form id="resetPass" action="" method="post">
-    <label>Password:
-        <input type="password" placeholder="Password" id="password" name="password0" required>
-    </label><br><br>
-    <label>Password again:
-        <input type="password" placeholder="Password" id="againPassword" name="password1" required>
-        <br><br>
-        <input type="submit" value="Login">
+    <label>Password:<br>
+        <input type="password" placeholder="Password" id="password" name="password0" onkeyup="char_count1();" required>
     </label>
+    <span id="feedback"></span>
+    <br><br>
+    <label>Password again:<br>
+        <input type="password" placeholder="Password" id="againPassword" name="password1"  required>
+    </label>
+    <span id="feedback1"></span>
+    <br><br>
+        <input type="submit" value="Login">
+
 </form>
-<br><br>
+</div>
 </body>
 <script>
-    var resetpass = document.getElementById("resetPass");
-    resetpass.addEventListener('submit', function (evt) {
-        var pass1 = document.querySelector("#password").value;
-        var pass2 = document.querySelector("#againPassword").value;
-        if (!(pass1 === pass2)) {
-            window.alert("Password ist falsch ");
-            evt.preventDefault();
-        } else {
-            window.alert("Password richtig");
-        }
+        let resetpass = document.getElementById("resetPass");
+        resetpass.addEventListener('submit', function (evt) {
+            let pass1 = document.querySelector("#password").value;
+            let pass2 = document.querySelector("#againPassword").value;
+            if (!(pass1 === pass2)) {
+                window.alert("Password ist falsch ");
+                evt.preventDefault();
+            } else {
+                window.alert("Password richtig");
+            }
 
-    });
+        });
+
+    function char_count1(){
+        //Über die DOM-Methode document.getElementById wird der Wert aus dem Eingabefeld geholt
+        //und der Variablen val zugewiesen.
+        let val = document.getElementById('password').value;
+
+        //Anschließend wird über die selbe DOM-Methode ein Referenzpunkt für das Feedback erzeugt
+        //und in der Variablen call gespeichert.
+        let call = document.getElementById('feedback');
+
+        //Ab hier beginnt die Prüfung.
+        //Das Passwort ist entweder zu kurz, unsicher, sicher oder sehr sicher
+
+        //Ist das Passwort wenigstens 6 Zeichen lang?
+        if (val.length > 5)
+        {
+
+            //Wenn das Passwort neben Buchstaben zusätzlich wenigstens eine Zahl
+            //und ein Sonderzeichen enthält, ist es "sehr sicher".
+            if (val.match(/\d+/) && val.match(/[a-zA-ZäöüÄÖÜ]+/) && val.match(/\W/))
+            {
+                call.style.color="#428c0d";
+                call.innerHTML = "<strong>sehr sicher!</strong>";
+            }
+
+            //Wenn das Passwort nur eine Zahl oder ein Sonderzeichen enthält, ist es "sicher"?
+            else if (val.match(/\d+/) && val.match(/[a-zA-ZäöüÄÖÜ]+/) || val.match(/\W/) && val.match(/[a-zA-ZäöüÄÖÜ]+/))
+            {
+                call.style.color="#56a40c";
+                call.innerHTML = "<strong>sicher!</strong>";
+            }
+            else //Hier enthält das Passwort weder Ziffern noch Sonderzeichen und ist somit "unsicher".
+            {
+
+                call.style.color="#ff9410";
+                call.innerHTML = "<strong>unsicher!</strong>";}
+        }
+        else //Hier enthält das Passwort nicht mal die erforderlichen 6 Zeichen und ist daher "zu kurz"
+        {
+            call.style.color="#ff352c";
+            call.innerHTML = "<strong>zu kurz!</strong>";}
+    }
+
+
 </script>
 </html>
