--- a/login/login.html
+++ b/login/login.html
@@ -13,7 +13,7 @@
     <form id="login" action="login.php" method="post">
 
         <label>E-Mail:<br>
-            <input type="email" placeholder="E-mail" id="email" name="email" value="max-mustermann@mustermann.de"
+            <input type="email" placeholder="E-mail" id="email" name="email" value="lukas-biermann@fahr-zur-hoelle.org"
                    required>
         </label><br><br>
         <label>Password:<br>
