added email sending

--- a/login/loginforgotpass.html
+++ b/login/loginforgotpass.html
@@ -11,7 +11,7 @@
 <h1> Rest your Design Revision Password </h1>
 <form id="forgottenpass" action="reset.php" method="post">
     <label>E-Mail:
-        <input type="email" placeholder="E-mail" id="email" name="email" value="max-mustermann@mustermann.de" required>
+        <input type="email" placeholder="E-mail" id="email" name="email" value="lukas-biermann@fahr-zur-hoelle.org" required>
     </label><br><br>
     <input type="submit" value="Passwort zurücksetzen">
 </form>
