--- a/login/loginNewAccount.html
+++ b/login/loginNewAccount.html
@@ -14,12 +14,14 @@
         <label>
             <input type="text" placeholder="First Name" id="firstName" required>
         </label>
-
         <label>
             <input type="text" placeholder="Last Name" id="lastName" required>
         </label></div><br>
         <label>
             <input type="email" placeholder="E-mail" id="email" required>
+        </label><br><br>
+        <label>
+            <input type="text" placeholder="Firm Name (optional)" id="firmName" >
         </label><br><br>
         <label>
             <input type="password" placeholder="Password" id="password" onkeyup="char_count();" required>
