added delete function

--- a/e-mail/emailBearbeitet.html
+++ b/e-mail/emailBearbeitet.html
@@ -15,7 +15,7 @@
     <h1 style="font-size:48px">Design Revision</h1>
     <p style="font-size:24px">Sehr geehrte {name},<br>
         Ihr Design Request {project-name} {project-id} wurde von uns bearbeitet.<br>
-        Sie können nun die gewünschten Änderungen ansehen.<br>
+        Sie können nun die gewünschten &Auml;nderungen ansehen.<br>
     </p>
     <a href="{link}" style="background-color: #0cfad6;color: black;font-size: 30px; padding: 15px 30px;margin: 20px;text-decoration:none;">Ansehen</a>
 </center>
