--- a/login/loginNewPassword.html
+++ b/login/loginNewPassword.html
@@ -11,15 +11,15 @@
 <h1>Type in your new Password</h1>
 <form id="resetPass" action="" method="post">
     <label>Password:<br>
-        <input type="password" placeholder="Password" id="password" name="password0" onkeyup="char_count1();" required>
+        <input type="password" placeholder="Password" id="password" name="password" onkeyup="char_count1();" required>
     </label>
     <span id="feedback"></span>
     <br><br>
     <label>Password again:<br>
-        <input type="password" placeholder="Password" id="againPassword" name="password1"  required>
+        <input type="password" placeholder="Password" id="againPassword" name="againPassword"  required>
     </label>
     <br><br>
-        <input type="submit" value="Login">
+        <input id="btnLogin" name="btnLogin" type="submit" value="Login">
 
 </form>
 </div>
