--- a/login/loginforgotpass.html
+++ b/login/loginforgotpass.html
@@ -13,7 +13,7 @@
     <label>E-Mail:
         <input type="email" placeholder="E-mail" id="email" name="email" value="lukas-biermann@fahr-zur-hoelle.org" required>
     </label><br><br>
-    <input type="submit" value="Passwort zurücksetzen">
+    <input type="submit" name="resetpass" id="resetpass" value="Passwort zurücksetzen">
 </form>
 </div>
 </body>
