--- a/login/loginNewAccount.html
+++ b/login/loginNewAccount.html
@@ -12,26 +12,26 @@
         <h1>Get new Account</h1>
         <div class="name">
         <label>
-            <input type="text" placeholder="First Name" id="firstName" required>
+            <input type="text" placeholder="First Name" id="firstName" name="firstName" required>
         </label>
         <label>
-            <input type="text" placeholder="Last Name" id="lastName" required>
+            <input type="text" placeholder="Last Name" id="lastName" name="lastName" required>
         </label></div><br>
         <label>
-            <input type="email" placeholder="E-mail" id="email" required>
+            <input type="email" placeholder="E-mail" id="email" name="email" required>
         </label><br><br>
         <label>
-            <input type="text" placeholder="Firm Name (optional)" id="firmName" >
+            <input type="text" placeholder="Firm Name (optional)" id="firmName" name="firmName" >
         </label><br><br>
         <label>
-            <input type="password" placeholder="Password" id="password" onkeyup="char_count();" required>
+            <input type="password" placeholder="Password" id="password" name="password" onkeyup="char_count();" required>
         </label>
         <span id="feedback"></span>
         <br><br>
         <label>
-            <input type="password" placeholder="Password again" id="againPassword" required>
+            <input type="password" placeholder="Password again" id="againPassword" name="againPassword" required>
         </label><br><br>
-        <input type="submit" value="Sign In">
+        <input name="btnSignIn" id ="btnSignIn" type="submit" value="Sign In">
     </form>
     <p>Already have an account yet? <a href="login.html">Sign In</a></p>
 </div>
