changed E-mail Images and curser:pointer css

--- a/e-mail/emailNeueAenderungen.html
+++ b/e-mail/emailNeueAenderungen.html
@@ -7,8 +7,7 @@
 </head>
 <body>
 <center>
-    <img alt="tick" height="200px" width="200px"
-         src="http://localhost/design-revision/files/img/demo.png">
+    <img alt="tick" height="200px" width="200px" src="http://localhost/design-revision/files/img/demo.png">
     <h1 style="font-size:48px">Design Revision</h1>
     <p style="font-size:24px">Der Kunde {name}, hat bei {project-name} {project-id} neue<br>
         &Auml;nderungen gespeichert.<br>
