--- a/login/loginNewAccount.html
+++ b/login/loginNewAccount.html
@@ -2,36 +2,38 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>New Account</title>
-    <link rel="stylesheet" href="../files/css/Login.css">
+    <link href="../files/css/Login.css" rel="stylesheet">
 </head>
 <body>
 <div class="form">
     <form id="newAccountForm">
         <h1>Get new Account</h1>
         <div class="name">
+            <label>
+                <input id="firstName" name="firstName" placeholder="First Name" required type="text">
+            </label>
+            <label>
+                <input id="lastName" name="lastName" placeholder="Last Name" required type="text">
+            </label></div>
+        <br>
         <label>
-            <input type="text" placeholder="First Name" id="firstName" name="firstName" required>
-        </label>
-        <label>
-            <input type="text" placeholder="Last Name" id="lastName" name="lastName" required>
-        </label></div><br>
-        <label>
-            <input type="email" placeholder="E-mail" id="email" name="email" required>
+            <input id="email" name="email" placeholder="E-mail" required type="email">
         </label><br><br>
         <label>
-            <input type="text" placeholder="Firm Name (optional)" id="firmName" name="firmName" >
+            <input id="firmName" name="firmName" placeholder="Firm Name (optional)" type="text">
         </label><br><br>
         <label>
-            <input type="password" placeholder="Password" id="password" name="password" onkeyup="char_count();" required>
+            <input id="password" name="password" onkeyup="char_count();" placeholder="Password" required
+                   type="password">
         </label>
         <span id="feedback"></span>
         <br><br>
         <label>
-            <input type="password" placeholder="Password again" id="againPassword" name="againPassword" required>
+            <input id="againPassword" name="againPassword" placeholder="Password again" required type="password">
         </label><br><br>
-        <input name="btnSignIn" id ="btnSignIn" type="submit" value="Sign In">
+        <input id="btnSignIn" name="btnSignIn" type="submit" value="Sign In">
     </form>
     <p>Already have an account yet? <a href="login.html">Sign In</a></p>
 </div>
@@ -55,41 +57,22 @@
     }
 
     function char_count() {
-        //Über die DOM-Methode document.getElementById wird der Wert aus dem Eingabefeld geholt
-        //und der Variablen val zugewiesen.
         let val = document.getElementById('password').value;
-
-        //Anschließend wird über die selbe DOM-Methode ein Referenzpunkt für das Feedback erzeugt
-        //und in der Variablen call gespeichert.
         let call = document.getElementById('feedback');
-
-        //Ab hier beginnt die Prüfung.
-        //Das Passwort ist entweder zu kurz, unsicher, sicher oder sehr sicher
-
-        //Ist das Passwort wenigstens 6 Zeichen lang?
-        if (val.length > 5) {
-
-            //Wenn das Passwort neben Buchstaben zusätzlich wenigstens eine Zahl
-            //und ein Sonderzeichen enthält, ist es "sehr sicher".
+        if (val.length > 7) {
             if (val.match(/\d+/) && val.match(/[a-zA-ZäöüÄÖÜ]+/) && val.match(/\W/)) {
                 call.style.color = "#428c0d";
-                call.innerHTML = "<strong>sehr sicher!</strong>";
-            }
-
-            //Wenn das Passwort nur eine Zahl oder ein Sonderzeichen enthält, ist es "sicher"?
-            else if (val.match(/\d+/) && val.match(/[a-zA-ZäöüÄÖÜ]+/) || val.match(/\W/) && val.match(/[a-zA-ZäöüÄÖÜ]+/)) {
+                call.innerHTML = "<strong>Das Passwort ist sehr sicher!</strong>";
+            } else if (val.match(/\d+/) && val.match(/[a-zA-ZäöüÄÖÜ]+/) || val.match(/\W/) && val.match(/[a-zA-ZäöüÄÖÜ]+/)) {
                 call.style.color = "#56a40c";
-                call.innerHTML = "<strong>sicher!</strong>";
-            } else //Hier enthält das Passwort weder Ziffern noch Sonderzeichen und ist somit "unsicher".
-            {
-
+                call.innerHTML = "<strong>Das Passwort ist sicher!</strong>";
+            } else {
                 call.style.color = "#ff9410";
-                call.innerHTML = "<strong>unsicher!</strong>";
+                call.innerHTML = "<strong>Das Passwort ist unsicher!</strong>";
             }
-        } else //Hier enthält das Passwort nicht mal die erforderlichen 6 Zeichen und ist daher "zu kurz"
-        {
+        } else {
             call.style.color = "#ff352c";
-            call.innerHTML = "<strong>zu kurz!</strong>";
+            call.innerHTML = "<strong>Das Passworrt ist zu kurz!</strong>";
         }
     }
 
