--- a/login/loginNewAccount.html
+++ b/login/loginNewAccount.html
@@ -8,30 +8,32 @@
 </head>
 <body>
 <div class="form">
-    <form id="newAccountForm">
+    <form id="newAccountForm" action="signup.php" method="post">
         <h1>Get new Account</h1>
         <div class="name">
-        <label>
-            <input type="text" placeholder="First Name" id="firstName" name="firstName" required>
-        </label>
-        <label>
-            <input type="text" placeholder="Last Name" id="lastName" name="lastName" required>
-        </label></div><br>
+            <label>
+                <input type="text" placeholder="First Name" id="firstName" name="firstName" required>
+            </label>
+            <label>
+                <input type="text" placeholder="Last Name" id="lastName" name="lastName" required>
+            </label></div>
+        <br>
         <label>
             <input type="email" placeholder="E-mail" id="email" name="email" required>
         </label><br><br>
         <label>
-            <input type="text" placeholder="Firm Name (optional)" id="firmName" name="firmName" >
+            <input type="text" placeholder="Firm Name (optional)" id="firmName" name="company">
         </label><br><br>
         <label>
-            <input type="password" placeholder="Password" id="password" name="password" onkeyup="char_count();" required>
+            <input type="password" placeholder="Password" id="password" name="password" onkeyup="char_count();"
+                   required>
         </label>
         <span id="feedback"></span>
         <br><br>
         <label>
             <input type="password" placeholder="Password again" id="againPassword" name="againPassword" required>
         </label><br><br>
-        <input name="btnSignIn" id ="btnSignIn" type="submit" value="Sign In">
+        <input name="btnSignIn" id="btnSignIn" type="submit" value="Sign In">
     </form>
     <p>Already have an account yet? <a href="login.html">Sign In</a></p>
 </div>
