--- a/login/loginNewPassword.html
+++ b/login/loginNewPassword.html
@@ -11,13 +11,14 @@
     <h1>Type in your new Password</h1>
     <form action="" id="resetPass" method="post">
         <label>Password:<br>
-            <input id="password" name="password" onkeyup="char_count1();" placeholder="Password" required
+            <input style="width: 300px" id="password" name="password" onkeyup="char_count1();" placeholder="Password" required
                    type="password">
         </label>
+        <progress id="progress" max="100" value="0"></progress>
         <span id="feedback"></span>
         <br><br>
         <label>Password again:<br>
-            <input id="againPassword" name="againPassword" placeholder="Password" required type="password">
+            <input style="width: 300px" id="againPassword" name="againPassword" placeholder="Password" required type="password">
         </label>
         <br><br>
         <input id="btnLogin" name="btnLogin" type="submit" value="Login">
@@ -43,21 +44,31 @@
 
         let val = document.getElementById('password').value;
         let call = document.getElementById('feedback');
+        let feedback = document.getElementById('progress');
+
         if (val.length > 7) {
             if (val.match(/\d+/) && val.match(/[a-zA-ZäöüÄÖÜ]+/) && val.match(/\W/)) {
                 call.style.color = "#428c0d";
-                call.innerHTML = "<strong>Das Passwort ist sehr sicher!</strong>";
+                call.innerHTML = "<strong>100% - Das Passwort ist sehr sicher!</strong>";
+                feedback.value =100;
             } else if (val.match(/\d+/) && val.match(/[a-zA-ZäöüÄÖÜ]+/) || val.match(/\W/) && val.match(/[a-zA-ZäöüÄÖÜ]+/)) {
                 call.style.color = "#56a40c";
-                call.innerHTML = "<strong>Das Passwort ist sicher!</strong>";
+                call.innerHTML = "<strong>75% - Das Passwort ist sicher!</strong>";
+                feedback.value=75;
             } else {
-
                 call.style.color = "#ff9410";
-                call.innerHTML = "<strong>Das Passwort ist unsicher!</strong>";
+                call.innerHTML = "<strong>50% -Das Passwort ist unsicher!</strong>";
+                feedback.value=50;
             }
         } else {
             call.style.color = "#ff352c";
-            call.innerHTML = "<strong>Das Passworrt ist zu kurz!</strong>";
+            call.innerHTML = "<strong>25% - Das Passwort ist zu kurz!</strong>";
+            feedback.value=25;
+        }
+        if(val.length===0){
+            call.innerHTML="";
+            feedback.value=0;
+
         }
     }
 
