--- a/login/loginNewPassword.html
+++ b/login/loginNewPassword.html
@@ -11,15 +11,18 @@
     <h1>Type in your new Password</h1>
     <form action="" id="resetPass" method="post">
         <label>Password:<br>
-            <input style="width: 300px" id="password" name="password" onkeyup="char_count1();" placeholder="Password" required
+            <input id="password" name="password" onkeyup="char_count1();" placeholder="Password" required
+                   style="width: 300px"
                    type="password">
         </label>
         <progress id="progress" max="100" value="0"></progress>
         <span id="feedback"></span>
         <br><br>
         <label>Password again:<br>
-            <input style="width: 300px" id="againPassword" name="againPassword" placeholder="Password" required type="password">
+            <input id="againPassword" name="againPassword" onkeyup="char_count2()" placeholder="Password"
+                   required style="width: 300px" type="password">
         </label>
+        <span id="samePass"></span>
         <br><br>
         <input id="btnLogin" name="btnLogin" type="submit" value="Login">
 
@@ -27,18 +30,33 @@
 </div>
 </body>
 <script>
+    let status = true;
     let resetpass = document.getElementById("resetPass");
     resetpass.addEventListener('submit', function (evt) {
-        let pass1 = document.querySelector("#password").value;
-        let pass2 = document.querySelector("#againPassword").value;
-        if (!(pass1 === pass2)) {
-            window.alert("Password ist falsch ");
+        let call = document.getElementById("feedback");
+        let feedback = document.getElementById('progress');
+        if (status) {
+
+                call.style.color = "black";
+                feedback.value = 0;
+                call.innerHTML = "<strong>Das Passwort muss sicher sein</strong>";
             evt.preventDefault();
-        } else {
-            window.alert("Password richtig");
+
         }
 
     });
+
+    function char_count2() {
+        let pass1 = document.querySelector("#password").value;
+        let pass2 = document.querySelector("#againPassword").value;
+        let samePass1 = document.getElementById("samePass");
+        if (!(pass1 === pass2)) {
+            samePass1.style.color = "red";
+            samePass1.innerHTML = "<strong>Passwörter verschieden</strong>";
+        }else{
+            samePass1.innerHTML = "";
+        }
+    }
 
     function char_count1() {
 
@@ -47,30 +65,36 @@
         let feedback = document.getElementById('progress');
 
         if (val.length > 7) {
-            if (val.match(/\d+/) && val.match(/[a-zA-ZäöüÄÖÜ]+/) && val.match(/\W/)) {
+            if (val.match(/\d+/) && val.match(/[a-zäöü]+/) && val.match(/\W/) && val.match(/[[A-ZÄÖU]+/)) {
                 call.style.color = "#428c0d";
                 call.innerHTML = "<strong>100% - Das Passwort ist sehr sicher!</strong>";
-                feedback.value =100;
-            } else if (val.match(/\d+/) && val.match(/[a-zA-ZäöüÄÖÜ]+/) || val.match(/\W/) && val.match(/[a-zA-ZäöüÄÖÜ]+/)) {
-                call.style.color = "#56a40c";
-                call.innerHTML = "<strong>75% - Das Passwort ist sicher!</strong>";
-                feedback.value=75;
+                feedback.value = 100;
+                status=false;
+
+            } else if (val.match(/\d+/) && val.match(/[a-zäöü]+/) || val.match(/\W/) && val.match(/[a-zäöü]+/)) {
+                call.style.color = "#ff9410";
+                call.innerHTML = "<strong>75% - Das Passwort fast sicher!</strong>";
+                feedback.value = 75;
+                status=true;
             } else {
                 call.style.color = "#ff9410";
                 call.innerHTML = "<strong>50% -Das Passwort ist unsicher!</strong>";
-                feedback.value=50;
+                feedback.value = 50;
             }
         } else {
             call.style.color = "#ff352c";
             call.innerHTML = "<strong>25% - Das Passwort ist zu kurz!</strong>";
-            feedback.value=25;
+            feedback.value = 25;
+            status=true;
         }
-        if(val.length===0){
-            call.innerHTML="";
-            feedback.value=0;
+        if (val.length === 0) {
+            call.innerHTML = "";
+            feedback.value = 0;
+            status=true;
 
         }
     }
+
 
 
 </script>
