--- a/login/login.html
+++ b/login/login.html
@@ -11,11 +11,10 @@
     <h1>Login</h1>
 
     <form action="login.php" id="login" method="post">
-
         <label>E-Mail:<br>
-            <input id="email" name="email" placeholder="E-mail" required type="email"
+            <input id="email" name="email" onkeyup="check_up3()" placeholder="E-mail" required type="email"
                    value="lukas-biermann@fahr-zur-hoelle.org">
-        </label><br><br>
+        </label><span id="statusEmail"></span><br><br>
         <label>Password:<br>
             <input id="password" name="password" placeholder="Password" required type="password"
                    value="Jo0001"></label><br>
@@ -29,18 +28,24 @@
 </body>
 <script>
     let resetPass = document.getElementById("login");
+    let statusEmail = document.getElementById('statusEmail');
     resetPass.addEventListener('submit', function (evt) {
         if (!(emailIsValid(document.querySelector("#email").value))) {
-            window.alert("Email ist falsch ");
+            statusEmail.style.color ="red";
+            statusEmail.innerHTML ="<strong>Gültige E-mail eingeben</strong>";
             evt.preventDefault();
         } else {
-            window.alert("Email ist richtig");
+
         }
 
     });
 
     function emailIsValid(email) {
         return (/^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(email))
+    }
+    function check_up3() {
+        statusEmail.innerHTML ="";
+
     }
 </script>
 </html>
