changed links and login

--- a/login/login.html
+++ b/login/login.html
@@ -15,14 +15,14 @@
             <input id="email" name="email" onkeyup="check_up3()" placeholder="E-mail" required type="email"
                    value="lukas-biermann@fahr-zur-hoelle.org">
         </label><span id="statusEmail"></span><br><br>
-        <label>Password:<br>
-            <input id="password" name="password" placeholder="Password" required type="password"
+        <label>Passwort:<br>
+            <input id="password" name="password" placeholder="Passwort" required type="password"
                    value="Jo0001"></label><br>
 
-        <p>Forgot Password? <a href="loginforgotpass.html">Reset</a></p>
+        <p>Passwort vergessen? <a href="loginforgotpass.html">Zurücksetzen</a></p>
         <input id="btnLogin" name="btnLogin" type="submit" value="Login">
     </form>
-    <p>Don't have an account yet? <a href="loginNewAccount.html">Get Account</a></p>
+    <p>Sie haben noch kein Konto? <a href="loginNewAccount.html">Erstellen sie sich jetzt eins</a></p>
 
 </div>
 </body>
