--- a/login/loginNewPassword.html
+++ b/login/loginNewPassword.html
@@ -8,18 +8,18 @@
 </head>
 <body>
 <div class="form">
-    <h1>Type in your new Password</h1>
+    <h1>Geben sie ihr neues Passwort ein</h1>
     <form action="" id="resetPass" method="post">
-        <label>Password:<br>
-            <input id="password" name="password" onkeyup="char_count1();" placeholder="Password" required
+        <label>Passwort:<br>
+            <input id="password" name="password" onkeyup="char_count1();" placeholder="Passwort" required
                    style="width: 300px"
                    type="password">
         </label>
         <progress id="progress" max="100" value="0"></progress>
         <span id="feedback"></span>
         <br><br>
-        <label>Password again:<br>
-            <input id="againPassword" name="againPassword" onkeyup="char_count2()" placeholder="Password"
+        <label>Passwort wiederholt<br>
+            <input id="againPassword" name="againPassword" onkeyup="char_count2()" placeholder="Passwort wiederholt"
                    required style="width: 300px" type="password">
         </label>
         <span id="samePass"></span>
