--- a/login/loginforgotpass.html
+++ b/login/loginforgotpass.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="form">
-    <h1> Rest your Design Revision Password </h1>
+    <h1> Setzen sie ihr Design Revision Passwort zurück </h1>
     <form action="reset.php" id="forgottenpass" method="post">
         <label>E-Mail:
             <input id="email" name="email" onkeyup="check_up3()" placeholder="E-mail" required
