fixed and improved some user components

--- a/login/login.html
+++ b/login/login.html
@@ -17,7 +17,7 @@
         </label><span id="statusEmail"></span><br><br>
         <label>Passwort:<br>
             <input id="password" name="password" placeholder="Passwort" required type="password"
-                   value="Jo0001"></label><br>
+                   value="Test#2019"></label><br>
 
         <p>Passwort vergessen? <a href="loginforgotpass.html">Zurücksetzen</a></p>
         <input id="btnLogin" name="btnLogin" type="submit" value="Login">
