--- a/login/loginforgotpass.html
+++ b/login/loginforgotpass.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <link rel="icon" href="../files/img/favicon.ico" type="image/x-icon">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title> Reset Password </title>
     <link href="../files/css/Login.css" rel="stylesheet">
