--- a/login/loginNewPassword.html
+++ b/login/loginNewPassword.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
+    <link rel="icon" href="../files/img/favicon.ico" type="image/x-icon">
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Reset Password</title>
